--- a/styles/style.css
+++ b/styles/style.css
@@ -591,10 +591,11 @@ img {
       -ms-flex-align: center;
           align-items: center;
   position: absolute;
-  top: calc(10%);
+  top: 10%;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
+  max-width: 100%;
   margin: 0 auto;
   left: 0;
   right: 0;
@@ -610,7 +611,7 @@ img {
   right: 1em;
   left: 1em;
   z-index: 1;
-  height: 6em;
+  height: 10em;
   bottom: 1em;
   background: #fff;
   content: "";
@@ -653,8 +654,15 @@ img {
 }
 .tech-stack li {
   margin: 0.5em 1em;
-  width: calc((100% / 4) - 2em);
+  width: calc(25% - 2em);
   text-align: center;
+}
+.tech-stack .li-text {
+  width: calc(100% - 2em);
+  text-transform: uppercase;
+  font-family: sans-serif;
+  font-weight: 900;
+  text-align: start;
 }
 
 .project-content-long:hover img,
@@ -695,7 +703,8 @@ img {
   height: 450px;
   -o-object-fit: cover;
      object-fit: cover;
-  border: 1px solid black;
+  -webkit-box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05), 0 15px 40px rgba(166, 173, 201, 0.2);
+          box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05), 0 15px 40px rgba(166, 173, 201, 0.2);
 }
 
 .project-content-long img {
@@ -703,7 +712,8 @@ img {
   height: 557px;
   -o-object-fit: cover;
      object-fit: cover;
-  border: 1px solid black;
+  -webkit-box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05), 0 15px 40px rgba(166, 173, 201, 0.2);
+          box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05), 0 15px 40px rgba(166, 173, 201, 0.2);
 }
 
 .project-title {
@@ -726,14 +736,22 @@ img {
   padding-top: 0.25em;
   -ms-flex-negative: 0;
       flex-shrink: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
 }
-
-.project-links * {
-  margin-left: 0.4em;
+.project-links p {
+  line-height: 1.5;
 }
-
-.project-links a:hover,
-.project-links a:active {
+.project-links a {
   text-shadow: 2px 4px 3px rgba(251, 206, 54, 0.3);
 }
 
@@ -1006,7 +1024,7 @@ header {
   .footer-content .wrapper .footer-info,
 .footer-content .wrapper .interests,
 .footer-content .wrapper .footer-contact {
-    width: calc((100% / 3) - 2.5em);
+    width: calc(33.3333333333% - 2.5em);
   }
   .footer-content .wrapper .footer-info ul,
 .footer-content .wrapper .interests ul,
@@ -1081,7 +1099,7 @@ header {
             flex-direction: row;
   }
   .contact-me .wrapper .contact-info-work {
-    width: calc(100% / 3);
+    width: 33.3333333333%;
   }
   .contact-me .wrapper .contact-info-work::before {
     left: -5px;
